# DecentralML

./: .gitignore  DecentralML.rs  LICENSE  README.md
TensorFlow_Federated_Learning_Local_Test/: mnist_federated_learning_test.py
docker/: README.md  build.sh  build_client.sh  build_node.sh  run.sh
docker/client_container/: Dockerfile  launch_client.sh
docker/container/: Dockerfile
docker/decentralml_app/: compose_data_annotator.yml  compose_model_contributor.yml  compose_model_creator.yml  compose_model_engineer.yml  compose_node_decentralml.yml  docker-compose.yml
docker/node_container/: Dockerfile  launch_node.sh
substrate-client-decentralml/: README.md  assign_task.py  create_task.py  create_task_ipfs.py  decentralml_client.py  dev_client.py  examples.py  main.py  mnist_tensorflow_federated_learning_test.py  pyproject.toml  requirements.txt  send_task_result.py  settings.py  storage_ipfs.py  utilities.py
substrate-client-decentralml/assets/: README.md  model_contributor_script.py
substrate-client-decentralml/assets/data_annotator/: start_task.sh
substrate-client-decentralml/assets/model_contributor/: model_contributor.py  requirements.txt  start_task.sh
substrate-client-decentralml/assets/model_creator/: model_creator.py  model_creator.sh  requirements.txt  settings.py  setup.sh
substrate-client-decentralml/assets/model_engineer/: model_engineer.py
substrate-client-decentralml/src/decentralml/: examples.py  main.py  roles.py  settings.py  storage.py  storage_ipfs.py
substrate-client-decentralml/src/decentraml_client/: assign_task.py  script.py  storage_ipfs.py  utilities.py
substrate-node-decentralml/: Cargo.toml  README.md
substrate-node-decentralml/node/: Cargo.toml
substrate-node-decentralml/pallets/decentralml/: Cargo.toml
substrate-node-decentralml/pallets/decentralml/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
substrate-node-decentralml/pallets/simple-crowdfund/src/: lib.rs
substrate-node-decentralml/pallets/template/src/: tests.rs
substrate-node-decentralml/runtime/: Cargo.toml
substrate-node-decentralml/runtime/src/: lib.rs
substrate-node-template/pallets/decentralml/: Cargo.toml
substrate-node-template/pallets/decentralml/src/: lib.rs  mock.rs  tests.rs
substrate-node-template/pallets/simple-crowdfund/: Cargo.toml
substrate-node-template/pallets/template/: Cargo.toml  Cargo.toml.old
substrate-node-template/pallets/template/src/: lib.rs  mock.rs  tests.rs
substrate-node-template/runtime/src/: lib.rs
