[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'A pallet that can mange multiple accounts using child storage, with which users can pool funds toward a common goal.'
edition = "2021"
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'simple-crowdfund'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']



[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-std = { default-features = false, version = '3.0.0' }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-io = { version = "23.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { version = "24.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }




# [dependencies]
# codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
# frame-system = { default-features = false, version = '3.0.0' }
# frame-support = { default-features = false, version = '3.0.0' }
# frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
# sp-std = { default-features = false, version = '3.0.0' }

# [dev-dependencies]
# serde = { version = "1.0.119" }
# sp-core = { default-features = false, version = '3.0.0' }
# sp-io = { default-features = false, version = '3.0.0' }
# sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
